# pyitawthar

./: .env  .gitignore  .pdm-python  pyproject.toml  requirements.txt
osales/: db.sqlite3  db.sqlite3-journal  db2.sqlite3  manage.py
osales/api/: admin.py  models.py  serializers.py  views.py
osales/api/migrations/: 0001_initial.py  0002_orderitem_order_products.py  0003_remove_order_products_alter_orderitem_order.py  0004_productcategory_product_status_discount_and_more.py
osales/business/: admin.py  apps.py  models.py  serializers.py  translation.py  views.py
osales/business/api/: categories.py  products.py  user.py
osales/business/management/commands/: populate.py
osales/business/migrations/: 0001_initial.py  0002_order_approved_by.py  0002_rename_alt_test_productimage_alt_text_and_more.py  0003_alter_categoryimage_product_category.py  0003_alter_discount_options_alter_exchangerate_options_and_more.py  0004_price_productcategory_parent_alter_product_price.py  0005_remove_product_price_price_product.py  0006_product_description_en_product_name_en_and_more.py  0007_remove_discount_discount_percentage_and_more.py  0008_alter_price_retail_pay_type_and_more.py  0009_alter_price_options_alter_order_status_usercart_and_more.py  0010_cartitem_user_discount_user_exchangerate_user_and_more.py
osales/business/schema/: categories.py  products.py  user_schema.py
osales/business/utils/: jwtauth.py
osales/osales/: api.py  asgi.py  settings.py  urls.py  wsgi.py
